# hailo_pi_people_counter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config.yaml  people_counter.cpp  zone_tracker.cpp  zone_tracker.hpp
